--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,20 @@
 .gboard {
     background-color: aqua;
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 60em;
+    padding: 15px;
+}
+.guess-word {
+    background-color: azure;
+    padding: 15px;
+    margin: 15px;
+    border: 1px solid black;
+    height: 4em;
+}
+.chances {
+    background-color: azure;
+    padding: 15px;
+    margin: 15px;
+    border: 1px solid black;
+    height: 50em;
 }
